--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,15 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.container{
+
+.container {
     width: 1280px;
     margin: 0 auto;
 }
-.row{
+
+.row {
     display: flex;
 }
 
@@ -16,75 +18,185 @@
     flex: 0 0 auto;
     width: 8.33333333%;
 }
+
 .col-2 {
     flex: 0 0 auto;
     width: 16.66666667%;
 }
+
 .col-3 {
     flex: 0 0 auto;
     width: 25%;
 }
+
 .col-4 {
     flex: 0 0 auto;
     width: 33.33333333%;
 }
+
 .col-5 {
     flex: 0 0 auto;
     width: 41.66666667%;
 }
+
 .col-6 {
     flex: 0 0 auto;
     width: 50%;
 }
+
 .col-7 {
     flex: 0 0 auto;
     width: 58.33333333%;
 }
+
 .col-8 {
     flex: 0 0 auto;
     width: 66.66666667%;
 }
+
 .col-9 {
     flex: 0 0 auto;
     width: 75%;
 }
+
 .col-10 {
     flex: 0 0 auto;
     width: 83.33333333%;
 }
+
 .col-11 {
     flex: 0 0 auto;
     width: 91.66666667%;
 }
+
 .col-12 {
     flex: 0 0 auto;
     width: 100%;
 }
-img{
+
+img {
     width: 100%;
     height: 100%;
 }
-.logo_container{
+
+.logo_container {
     width: 160px;
     height: 46px;
     margin-top: 16px;
-    margin-bottom: 16px;   
+    margin-bottom: 16px;
 }
-.header{
+
+.header {
     background-color: white;
 }
-body{
+
+body {
     background-color: #E5E5E5;
 }
-.text_grey{
+
+.text_grey {
     color: #6F7383;
 }
-.text_orange{
+
+.text_orange {
     color: #FD4100;
 }
-.mt_32{
+
+.mt_32 {
     margin-top: 32px;
 }
-.justify_space_between{
+
+.justify_space_between {
     justify-content: space-between;
+}
+
+.icon_box {
+    width: 24px;
+    height: 25px;
+}
+
+.filter_box {
+    background: #FFFFFF;
+    border: 1px solid #E2E5EB;
+    box-shadow: 0px 4px 16px rgba(164, 174, 193, 0.1);
+    border-radius: 12px 12px 0px 0px;
+}
+
+.d_flex {
+    display: flex;
+}
+
+.justify_content_center {
+    justify-content: center;
+}
+
+.align_item_center {
+    align-items: center;
+}
+
+.tab_container {
+    padding-top: 16px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 16px;
+}
+
+.bg_gray {
+    background-color: #F9F9FB;
+    border-right: 1px #E9E9F0 solid;
+    border-bottom: 1px #E9E9F0 solid;
+}
+
+.active {
+    border-bottom: 1px orangered solid;
+    border-right: 1px #E9E9F0 solid;
+}
+
+.radius_b {
+    border-radius: 12px 12px 0px 0px
+}
+
+.mt_23 {
+    margin-top: 23px;
+}
+
+.filter_box_body {
+    padding: 24px;
+}
+
+.select {
+    background: #FFFFFF;
+    border: 1px solid #C2C9D8;
+    border-radius: 8px;
+    width: 100%;
+    height: 40px;
+}
+
+hr {
+    color: #E9E9F0;
+}
+
+.form_control {
+    height: 40px;
+    border: 1px solid #D8DBE2;
+    border-radius: 8px;
+    width: 100%;
+}
+
+.input_text {
+    padding: 14px;
+}
+.filter_box_footer{
+    padding: 24px;
+}
+.search_button{
+    background: #FD4100;
+    border-radius: 6px;
+    border: none;
+    color: white;
+    width: 100%;
+    font-weight: 700;
+    font-size: 14px;
+    text-align: center;
+    padding: 8px 76px;
 }
